# KineticAssembly

./: AGENTS.md  ASSEMBLY_COMPATIBILITY_TIERS.md  MIXIN_COMPATIBILITY.md  README.md  build.gradle  gradle.properties  settings.gradle  stonecutter.gradle
.github/workflows/: build.yml  publish-maven.yml
docs/: aerodynamics4mc-compat.md  api-artifacts.md  assembly-client-presentation.md  assembly-interaction-contract.md  assembly-interactions.md  assembly-mainline.md  assembly-query-bridge.md  assembly.md  block-collision.md  ccd.md  chunk-collision-pipeline.md  ci.md  complexity-reduction-construction-path.md  debug-object-management.md  detached-block-prototype.md  diagnostics.md  dynamic-body-controls.md  elastic-panel-prototype.md  entity-sync.md  fem-deformable-volume-prototype.md  gpu-dynamics.md  mechanics-api.md  milestone_1.md  milestones.md  milestones_2.md  native-packaging.md  partial-block-collision.md  player-bridge.md  player-physics.md  provenance.md  render-proxy.md  runtime-profiling.md  scene-layer.md  terrain-batching.md
examples/neoforge-consumer/: README.md  build.gradle  settings.gradle
maven/com/firedoge/kineticassembly/kinetic_assembly-api-1.21.1/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/com/firedoge/kineticassembly/kinetic_assembly-api-1.21.1/0.1.0-alpha.1/: kinetic_assembly-api-1.21.1-0.1.0-alpha.1-sources.jar.md5  kinetic_assembly-api-1.21.1-0.1.0-alpha.1-sources.jar.sha1  kinetic_assembly-api-1.21.1-0.1.0-alpha.1-sources.jar.sha256  kinetic_assembly-api-1.21.1-0.1.0-alpha.1-sources.jar.sha512  kinetic_assembly-api-1.21.1-0.1.0-alpha.1.jar.md5  kinetic_assembly-api-1.21.1-0.1.0-alpha.1.jar.sha1  kinetic_assembly-api-1.21.1-0.1.0-alpha.1.jar.sha256  kinetic_assembly-api-1.21.1-0.1.0-alpha.1.jar.sha512  kinetic_assembly-api-1.21.1-0.1.0-alpha.1.pom  kinetic_assembly-api-1.21.1-0.1.0-alpha.1.pom.md5  kinetic_assembly-api-1.21.1-0.1.0-alpha.1.pom.sha1  kinetic_assembly-api-1.21.1-0.1.0-alpha.1.pom.sha256  kinetic_assembly-api-1.21.1-0.1.0-alpha.1.pom.sha512
maven/com/firedoge/kineticassembly/kinetic_assembly-api-1.21.11/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/com/firedoge/kineticassembly/kinetic_assembly-api-1.21.11/0.1.0-alpha.1/: kinetic_assembly-api-1.21.11-0.1.0-alpha.1-sources.jar.md5  kinetic_assembly-api-1.21.11-0.1.0-alpha.1-sources.jar.sha1  kinetic_assembly-api-1.21.11-0.1.0-alpha.1-sources.jar.sha256  kinetic_assembly-api-1.21.11-0.1.0-alpha.1-sources.jar.sha512  kinetic_assembly-api-1.21.11-0.1.0-alpha.1.jar.md5  kinetic_assembly-api-1.21.11-0.1.0-alpha.1.jar.sha1  kinetic_assembly-api-1.21.11-0.1.0-alpha.1.jar.sha256  kinetic_assembly-api-1.21.11-0.1.0-alpha.1.jar.sha512  kinetic_assembly-api-1.21.11-0.1.0-alpha.1.pom  kinetic_assembly-api-1.21.11-0.1.0-alpha.1.pom.md5  kinetic_assembly-api-1.21.11-0.1.0-alpha.1.pom.sha1  kinetic_assembly-api-1.21.11-0.1.0-alpha.1.pom.sha256  kinetic_assembly-api-1.21.11-0.1.0-alpha.1.pom.sha512
maven/com/firedoge/kineticassembly/kinetic_assembly-neoforge-1.21.1/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/com/firedoge/kineticassembly/kinetic_assembly-neoforge-1.21.1/0.1.0-alpha.1/: kinetic_assembly-neoforge-1.21.1-0.1.0-alpha.1.jar.md5  kinetic_assembly-neoforge-1.21.1-0.1.0-alpha.1.jar.sha1  kinetic_assembly-neoforge-1.21.1-0.1.0-alpha.1.jar.sha256  kinetic_assembly-neoforge-1.21.1-0.1.0-alpha.1.jar.sha512  kinetic_assembly-neoforge-1.21.1-0.1.0-alpha.1.module  kinetic_assembly-neoforge-1.21.1-0.1.0-alpha.1.module.md5  kinetic_assembly-neoforge-1.21.1-0.1.0-alpha.1.module.sha1  kinetic_assembly-neoforge-1.21.1-0.1.0-alpha.1.module.sha256  kinetic_assembly-neoforge-1.21.1-0.1.0-alpha.1.module.sha512  kinetic_assembly-neoforge-1.21.1-0.1.0-alpha.1.pom  kinetic_assembly-neoforge-1.21.1-0.1.0-alpha.1.pom.md5  kinetic_assembly-neoforge-1.21.1-0.1.0-alpha.1.pom.sha1  kinetic_assembly-neoforge-1.21.1-0.1.0-alpha.1.pom.sha256  kinetic_assembly-neoforge-1.21.1-0.1.0-alpha.1.pom.sha512
maven/com/firedoge/kineticassembly/kinetic_assembly-neoforge-1.21.11/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/com/firedoge/kineticassembly/kinetic_assembly-neoforge-1.21.11/0.1.0-alpha.1/: kinetic_assembly-neoforge-1.21.11-0.1.0-alpha.1.jar.md5  kinetic_assembly-neoforge-1.21.11-0.1.0-alpha.1.jar.sha1  kinetic_assembly-neoforge-1.21.11-0.1.0-alpha.1.jar.sha256  kinetic_assembly-neoforge-1.21.11-0.1.0-alpha.1.jar.sha512  kinetic_assembly-neoforge-1.21.11-0.1.0-alpha.1.module  kinetic_assembly-neoforge-1.21.11-0.1.0-alpha.1.module.md5  kinetic_assembly-neoforge-1.21.11-0.1.0-alpha.1.module.sha1  kinetic_assembly-neoforge-1.21.11-0.1.0-alpha.1.module.sha256  kinetic_assembly-neoforge-1.21.11-0.1.0-alpha.1.module.sha512  kinetic_assembly-neoforge-1.21.11-0.1.0-alpha.1.pom  kinetic_assembly-neoforge-1.21.11-0.1.0-alpha.1.pom.md5  kinetic_assembly-neoforge-1.21.11-0.1.0-alpha.1.pom.sha1  kinetic_assembly-neoforge-1.21.11-0.1.0-alpha.1.pom.sha256  kinetic_assembly-neoforge-1.21.11-0.1.0-alpha.1.pom.sha512
src/common/java/com/firedoge/kineticassembly/: KineticAssembly.java
src/common/resources/: kinetic_assembly.mixins.json
src/common/resources/kinetic_assembly/: default_block_density.json
src/main/cpp/kinetic_assembly/: CMakeLists.txt
src/main/cpp/kinetic_assembly/include/kinetic_assembly/: conversions.hpp  jni_bridge.hpp  physx_body.hpp  physx_context.hpp  physx_shape.hpp  physx_world.hpp
src/main/cpp/kinetic_assembly/src/: conversions.cpp  jni_bridge.cpp  physx_body.cpp  physx_context.cpp  physx_shape.cpp  physx_world.cpp
tools/migration/: analyze_common_split.py
tools/native/: build-linux.sh  build-macos.sh  build-windows.ps1
versions/1.21.1/: gradle.properties  settings.gradle
versions/1.21.11/: build.gradle  gradle.properties  settings.gradle
(+308 files in other folders)
